doc spi