@@ -26,11 +26,18 @@ dependencies {
 	runtimeOnly 'ch.qos.logback:logback-classic:1.4.0'
 
 	// Testing dependencies
-	testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
-	testImplementation 'org.mockito:mockito-core:5.5.0'
+	testImplementation 'org.junit.jupiter:junit-jupiter:5.11.3'
+	testImplementation 'org.mockito:mockito-core:5.14.2'
+	testImplementation 'org.mockito:mockito-junit-jupiter:5.14.2'
+	testImplementation 'net.bytebuddy:byte-buddy:1.15.10'
+	testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.11.4'
 }
 
 tasks.test {
+	var listArgs = new ArrayList<String>()
+	listArgs.add("--add-opens=java.base/java.lang=ALL-UNNAMED")
+	listArgs.add("--add-opens=java.base/java.lang.invoke=ALL-UNNAMED")
+	setJvmArgs(listArgs)
 	useJUnitPlatform()
 }
 
